--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,8 @@ body{
 	margin-top: 50px;
 }
 
+
+
 .navbar__ul li{
 	margin-left: 15px;
 	margin-right:60px; 
@@ -153,3 +155,39 @@ section{
 	}
 }
 
+@media screen and (max-width: 800px){
+	.navbar{
+		width: 100%;
+	}
+
+	#form{
+		width: 375px;
+		text-align: center;
+	}
+	
+	h1{
+		text-align: center;
+	}
+
+	section{
+		display: grid;
+		grid-template-columns: auto auto;
+		grid-template-rows: auto auto;
+	}
+
+	.movie{
+		margin-right: 50px;
+		width: 200px;
+		display: flex;
+		flex-direction: column;
+		width-left:20px; 
+	}
+
+	.movie__img{
+		margin: -20px;
+	}
+
+	img{
+		padding:-100px; 
+	}
+}
