--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,9 +170,8 @@ section{
 	}
 
 	section{
-		display: grid;
-		grid-template-columns: auto auto;
-		grid-template-rows: auto auto;
+		display: flex;
+		flex-direction: column;
 	}
 
 	.movie{
